RESOLVED FIXED196521
Clear WorkerCacheStorageConnection callbacks on WorkerGlobalScope termination
https://bugs.webkit.org/show_bug.cgi?id=196521
Summary Clear WorkerCacheStorageConnection callbacks on WorkerGlobalScope termination
youenn fablet
Reported 2019-04-02 18:00:59 PDT
Clear WorkerCacheStorageConnection callbacks on WorkerGlobalScope termination
Attachments
Patch (5.63 KB, patch)
2019-04-02 18:27 PDT, youenn fablet
no flags
Fixing Win (5.76 KB, patch)
2019-04-03 08:30 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-04-02 18:14:41 PDT
youenn fablet
Comment 2 2019-04-02 18:27:41 PDT
youenn fablet
Comment 3 2019-04-03 08:30:27 PDT
Created attachment 366606 [details] Fixing Win
WebKit Commit Bot
Comment 4 2019-04-03 10:45:24 PDT
Comment on attachment 366606 [details] Fixing Win Clearing flags on attachment: 366606 Committed r243812: <https://trac.webkit.org/changeset/243812>
WebKit Commit Bot
Comment 5 2019-04-03 10:45:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.